--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
+        <spring-boot-maven-plugin.version>3.2.8</spring-boot-maven-plugin.version>
+        <jib-maven-plugin.version>3.3.0</jib-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
