--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -2,5 +2,5 @@ spring:
   application:
     name: apigateway
   config:
-    import: optional:configserver:http://localhost:8888
+    import: optional:configserver:http://config-mcs:8888
 
