--- a/cofig-server/src/main/resources/configurations/discovery.yml
+++ b/cofig-server/src/main/resources/configurations/discovery.yml
@@ -1,6 +1,6 @@
 eureka:
   instance:
-    hostname: localhost
+    hostname: discovery-mcs
   client:
     register-with-eureka: false
     fetch-registry: false
