--- a/usermicroservice/src/main/resources/application.yml
+++ b/usermicroservice/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: usermicroservice
   config:
-    import: optional:configserver:http://localhost:8888
+    import: optional:configserver:http://config-mcs:8888
